@@ -9,3 +9,7 @@ This java app was designed to help people be more secure on their computers. Usi
 The UI functionality was created by Christopher Lee, a grade 11 student at St. Augustine Catholic High School
 ### Backend
 Our algorithms were created by Kaden Seto, a grade 11 student at St. Augustine Catholic High School
+
+
+NOTE TO KADEN
+--module-path "PATH TO JFX20" --add-modules=javafx.controls,javafx.fxml
